<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:foregroundTint="#FDFCFC"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/camden" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/pin"
                android:layout_width="18dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/preview" />

            <TextView
                android:id="@+id/image_description"
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/image_description"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/PersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="90dp"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:text="@string/Person_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="51dp"
            android:layout_marginHorizontal="240dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#020202"
            android:contentDescription="@android:string/untitled"
            app:srcCompat="@android:drawable/stat_sys_download"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="285dp"
            android:backgroundTint="#050505"
            android:contentDescription="@android:string/untitled"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="330dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#020202"
            android:contentDescription="@android:string/unknownName"
            android:foregroundTint="#FFFFFF"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:srcCompat="@drawable/avatar"
            android:contentDescription="@string/image_description"/>

    </FrameLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/Camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Camera"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/Aperture"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="250dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Aperture"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/camera_N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Camera_N"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Aperture_N"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="250dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Aperture_N"
            android:textColor="@color/white" />
    </FrameLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/Focal_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Focal_length"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/Shutter_speed"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="250dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Shutter_speed"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Focal_length_N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Focal_length_N"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Shutter_speed_N"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="250dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Shutter_speed_N"
            android:textColor="@color/white" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/ISO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/ISO"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Dimensions"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="250dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Dimensions"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/ISO_N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/ISO_N"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Dimensions_N"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="250dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Dimensions_N"
            android:textColor="@color/white" />

    </FrameLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/Views"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Views"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Views_N"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Views_N"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Downloads"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="200dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Downloads"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Downloads_N"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="200dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Downloads_N"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Likes"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="300dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif-black"
            android:text="@string/Likes"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/Likes_N"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="300dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#00FFFFFF"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:text="@string/Likes_N"
            android:textColor="@color/white" />

    </FrameLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/city_camden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/City"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"/>

        <Button
            android:id="@+id/Country_UK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/Country"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"/>
    </FrameLayout>


</LinearLayout>